UI changes with top app bar & nav drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">ProjectOne</string>
     <string name="about_url">http://www.google.com</string>
     <string name="learn_more"><a href="https://www.google.com">Learn more about ProjectOne</a></string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
